# tg-bot-1c

./: .env  .env.example  .gitignore  Dockerfile  README.md  bot.db  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
src/: bot.py  config.py  database.py  ssh_manager.py
src/handlers/: __init__.py  user.py
src/middlewares/: __init__.py  database.py
